--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,4 +1,5 @@
-
+@import be.objectify.deadbolt.java.views.html._
+@import be.objectify.deadbolt.core.utils.TemplateUtils._
             <div class="navbar navbar-default navbar-static-top" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
@@ -28,10 +29,21 @@
                                 </ul>
                             </li>
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="active"><a href="./">Default</a></li>
-                            <li><a href="../navbar-static-top/">Static top</a></li>
-                        </ul>
+                        @subjectNotPresent() {
+                            <form class="navbar-form navbar-right">
+                                <a href="@routes.Authorization.blank()" class="btn btn-sm btn-primary">Зарегистрироваться</a>
+                            </form>
+                            <form class="navbar-form navbar-right" action="@routes.Authorization.quickSignin()">
+
+                                <div class="form-group">
+                                    <input type="text" name="email" placeholder="email" class="form-control input-sm" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="password"name="password" placeholder="пароль" class="form-control input-sm" required>
+                                </div>
+                                <button type="submit" class="btn btn-sm btn-primary">Войти</button>
+                            </form>
+                        }
 
                     </div>
                 </div>
