--- a/app/views/common/profile.scala.html
+++ b/app/views/common/profile.scala.html
@@ -17,6 +17,7 @@
 
     </div>
 
+    <script type="text/javascript" src='@routes.Application.javascriptRoutes()'></script>
     <script>
     function CountdownTimer(elm,tl,mes){
     this.initialize.apply(this,arguments);
@@ -57,6 +58,24 @@
     window.onload=function(){
     CDT();
     }
+
+    window.onload=function(){
+    var intervalId = setInterval("getLikes()",3000);
+    }
+
+    function getLikes(){
+    myJsRoutes.controllers.Application.getLikes().ajax({
+    data:null,
+
+    success : function(data) {
+//    alert(data);
+    },
+    cache: false,
+    contentType: false,
+    processData: false
+    });
+    }
+
     </script>
 
 }
